# Billing_Core

./: .coverage  .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml
src/billing_core/api/: deps.py  error_handlers.py  main.py  schemas.py  settings.py
src/billing_core/api/routers/: health.py  invoices.py  plans.py  promos.py  subscriptions.py
src/billing_core/application/: repositories.py  services.py  tx.py
src/billing_core/domain/: __init__.py  catalog.py  errors.py  invoice.py  mixins.py  money.py  plans.py  promo.py  proration.py  subscription.py
src/billing_core/infrastructure/: memory_repos.py
src/billing_core_demo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_api_smoke.py  test_billing_service.py  test_invoice.py  test_money.py  test_plans.py  test_promo.py  test_proration.py  test_subscription.py
