[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "billing-core-demo"
version = "0.0.1"
description = "Billing Core (domain) + demo API (later) with tests and deploy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
    "httpx>=0.27",
]

api = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.30",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
branch = true
source = ["billing_core"]

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_empty = true

[tool.ruff]
target-version = "py312"
line-length = 130

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

